--- a/pages/dogfind.html
+++ b/pages/dogfind.html
@@ -9,23 +9,33 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/dogfind.css">
   <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
   <header>
     <div class="inner">
       <div class="logo center">
-        <a href="/index.html">
+        <a href="/index.html" class="center">
           <div class="logoText">
             헨젤 & 빵조각
           </div>
+          <div class="logoImg">
+            <img src="/images/logo/dogcat.png" alt="logo">
+          </div>
         </a>
-
-        <div class="logoImg">
-          <img src="/images/logo/dogcat.png" alt="logo">
-        </div>
       </div>
   
       <ul class="menu center">
+        <li>
+          <a href="/pages/dogfind.html">
+            보호중인 동물
+            <div class="bar"></div>
+          </a>
+        </li>
+        <li>
+          찾고있는 동물
+          <div class="bar"></div>
+        </li>
         <li>
           <a href="/pages/findnew.html">
             입양공고
@@ -33,18 +43,8 @@
           </a>
         </li>
         <li>
-          <a href="/pages/dogfind.html">
-            빵조각 보러가기
-            <div class="bar"></div>
-          </a>
-        </li>
-        <li>
-          헨젤네 일상
-          <div class="bar"></div>
-        </li>
-        <li>
           <a href="/pages/review.html">
-            후기게시판
+            입양후기
             <div class="bar"></div>
           </a>
         </li>
@@ -55,7 +55,7 @@
           </a>
         </li>
         <li>
-          온라인 입소신청
+          Q&A
           <div class="bar"></div>
         </li>
       </ul>
@@ -65,11 +65,11 @@
   <section class="board">
     <div class="inner">
       <div class="boardName">
-        강아지를 보호고 있는걸 알리는 게시판
+        킁킁.. 주인님이 절 찾으러 오셨나봐요!
         <div class="bar"></div>
       </div>
       <div class="searchBox center">
-        <input type="text">
+        <input type="text" class="searchInput">
         <div class="searchIcon">
           <svg viewBox="0 0 512 512">
             <path d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z"/>
@@ -77,86 +77,122 @@
         </div>
       </div>
 
+      <div class="write btn center">
+        글쓰기
+      </div>
+
       <div class="boardList">
         <div class="card">
           <img src="/images/dog/profile1.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile2.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile3.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile4.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile5.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
-
         <div class="card">
           <img src="/images/dog/profile1.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile2.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
 
         <div class="card">
           <img src="/images/dog/profile3.jpg" alt="find">
           <div class="cardText">
-            <div><span>발견장소</span> : 서울시 강남구 별동별로 150-15</div>
-            <div><span>이름 : </span>웃음이</div>
-            <div><span>성별</span> : 남아</div>
-            <div><span>상세설명</span> : 많이 말라있었고 지저분했던 것 으로 보았을때 주인을 잃어 버린지 오래되었던거 같습니다. 목줄이나 동물 코드는 따로 없었습니다.</div>
+            <div>
+              <div class="name">발견장소</div>
+              서울시 강남구 별동별로 150-15
+            </div>
+            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">이름 : </span>웃음이</div>
+            <div><span class="name">성별</span> : 남아</div>
+            <div><span class="name">특징</span> : 인간같이 행동함</div>
           </div>
         </div>
+        
         
       </div>
 
@@ -165,5 +201,21 @@
       </div>
     </div>
   </section>
+
+  <script>
+
+const searchInput = document.querySelector(".searchInput");
+  const searchBox = document.querySelector(".searchBox");
+  const searchIcon = document.querySelector(".searchIcon");
+  
+  searchInput.addEventListener("focus", () => {
+    searchBox.classList.add("onFocus");
+    searchIcon.classList.add("onFocus");
+  })
+  searchInput.addEventListener("focusout", () => {
+    searchBox.classList.remove("onFocus");
+    searchIcon.classList.remove("onFocus");
+  })
+  </script>
 </body>
 </html>
