--- a/pages/email.html
+++ b/pages/email.html
@@ -7,23 +7,34 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/email.css">
   <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/common.css">
   <title>Hansel & Crumb</title>
 </head>
 <body>
   <header>
     <div class="inner">
       <div class="logo center">
-        <a href="/index.html">
+        <a href="/index.html" class="center">
           <div class="logoText">
             헨젤 & 빵조각
           </div>
+          <div class="logoImg">
+            <img src="/images/logo/dogcat.png" alt="logo">
+          </div>
         </a>
-        <div class="logoImg">
-          <img src="/images/logo/dogcat.png" alt="logo">
-        </div>
       </div>
   
       <ul class="menu center">
+        <li>
+          <a href="/pages/dogfind.html">
+            보호중인 동물
+            <div class="bar"></div>
+          </a>
+        </li>
+        <li>
+          찾고있는 동물
+          <div class="bar"></div>
+        </li>
         <li>
           <a href="/pages/findnew.html">
             입양공고
@@ -31,18 +42,8 @@
           </a>
         </li>
         <li>
-          <a href="/pages/dogfind.html">
-            빵조각 보러가기
-            <div class="bar"></div>
-          </a>
-        </li>
-        <li>
-          헨젤네 일상
-          <div class="bar"></div>
-        </li>
-        <li>
           <a href="/pages/review.html">
-            후기게시판
+            입양후기
             <div class="bar"></div>
           </a>
         </li>
@@ -53,7 +54,7 @@
           </a>
         </li>
         <li>
-          온라인 입소신청
+          Q&A
           <div class="bar"></div>
         </li>
       </ul>
@@ -67,7 +68,7 @@
     <div class="video_cover"></div>
     <div class="inner center">
       <h2 class="subject">
-        이메일을 보내는 페이지 입니다.
+        헨젤 & 빵조각 에게 메일 보내기
       </h2>
       <form action="#" class="center">
   
@@ -87,7 +88,7 @@
 
         <div class="content">
           <h3>내용</h3>
-          <textarea name="content" id="content" cols="30" rows="10"></textarea>
+          <textarea name="content" id="content" cols="30" rows="10" resize="false"></textarea>
         </div>
 
         <div class="submit">
