--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
     </div>
   </section>
 
+  <footer class="center">
+    2022.08.19 All &copy; Rights reserved by kic1Team
+  </footer>
+
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c641dba86007c146afe79bf92f4f07c2&libraries=services"></script>
   <script src="/js/kakaomap.js"></script>
 </body>
