--- a/pages/dogfind.html
+++ b/pages/dogfind.html
@@ -89,10 +89,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -103,10 +103,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -117,10 +117,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -131,10 +131,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -145,10 +145,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
         <div class="card">
@@ -158,10 +158,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -172,10 +172,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
 
@@ -186,10 +186,10 @@
               <div class="name">발견장소</div>
               서울시 강남구 별동별로 150-15
             </div>
-            <div><span class="name">발견날짜</span> : 2022.02.02</div>
+            <div><span class="name">발견날짜 : </span>2022.02.02</div>
             <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별</span> : 남아</div>
-            <div><span class="name">특징</span> : 인간같이 행동함</div>
+            <div><span class="name">성별 : </span>남아</div>
+            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
         </div>
         
@@ -201,6 +201,10 @@
       </div>
     </div>
   </section>
+
+  <footer class="center">
+    2022.08.19 All &copy; Rights reserved by kic1Team
+  </footer>
 
   <script>
 
