--- a/pages/email.html
+++ b/pages/email.html
@@ -98,5 +98,9 @@
       </form>
     </div>
   </section>
+
+  <footer class="center">
+    2022.08.19 All &copy; Rights reserved by kic1Team
+  </footer>
 </body>
 </html>
