--- a/pages/findnew.html
+++ b/pages/findnew.html
@@ -284,6 +284,10 @@
     </div>
   </section>
 
+  <footer class="center">
+    2022.08.19 All &copy; Rights reserved by kic1Team
+  </footer>
+
   <script>
 
     const searchInput = document.querySelector(".searchInput");
