--- a/pages/review.html
+++ b/pages/review.html
@@ -163,6 +163,10 @@
     </div>
   </section>
 
+  <footer class="center">
+    2022.08.19 All &copy; Rights reserved by kic1Team
+  </footer>
+
   <script>
 
     const searchInput = document.querySelector(".searchInput");
