--- a/pages/findnew.html
+++ b/pages/findnew.html
@@ -217,10 +217,12 @@
       </div>
 
       <div class="boardList">
-        <div class="card">
-          <img src="/images/dog/profile1.jpg" alt="find">
-          <div class="name center">똘망이</div>
-        </div>
+        <a href="/pages/findnewInfo.html">
+          <div class="card">
+            <img src="/images/dog/profile6.jpg" alt="find">
+            <div class="name center">똘망이</div>
+          </div>
+        </a>
 
         <div class="card">
           <img src="/images/dog/profile2.jpg" alt="find">
