--- a/pages/dogfind.html
+++ b/pages/dogfind.html
@@ -82,19 +82,21 @@
       </div>
 
       <div class="boardList">
-        <div class="card">
-          <img src="/images/dog/profile1.jpg" alt="find">
-          <div class="cardText">
-            <div>
-              <div class="name">발견장소</div>
-              서울시 강남구 별동별로 150-15
+        <a href="/pages/dogfindInfo.html">
+          <div class="card">
+            <img src="/images/dog/profile1.jpg" alt="find">
+            <div class="cardText">
+              <div>
+                <div class="name">발견장소</div>
+                서울시 강남구 별동별로 150-15
+              </div>
+              <div><span class="name">발견날짜 : </span>2022.02.02</div>
+              <div><span class="name">이름 : </span>웃음이</div>
+              <div><span class="name">성별 : </span>남아</div>
+              <div><span class="name">특징 : </span>인간같이 행동함</div>
             </div>
-            <div><span class="name">발견날짜 : </span>2022.02.02</div>
-            <div><span class="name">이름 : </span>웃음이</div>
-            <div><span class="name">성별 : </span>남아</div>
-            <div><span class="name">특징 : </span>인간같이 행동함</div>
           </div>
-        </div>
+        </a>
 
         <div class="card">
           <img src="/images/dog/profile2.jpg" alt="find">
