--- a/index.html
+++ b/index.html
@@ -159,7 +159,16 @@
             <div class="reviewImg">
               <img src="/images/dog/profile1.jpg" alt="">
             </div>
-            <div class="reviewText center">후기에 대한 내용</div>
+            <div class="reviewText center">
+              <div class="cardText">
+                <div><span class="name">제목</span> : 부러스 부러스 찾아 부러스</div>
+                <div class="box center">
+                  <div><span class="name">닉네임 : </span>웃음이 주인</div>
+                  <div><span class="name">반려동물 이름 : </span>웃음이</div>
+                </div>
+                <div>혹여나 못찾으면 어쩔까 하고 불안해 하고 있어는데 마침 ㅇㅇㅇ님이 보호중이라고 올려주셔서 찾을 수 있었습니다. 감사합니다.</div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -168,7 +177,16 @@
             <div class="reviewImg">
               <img src="/images/dog/profile2.jpg" alt="">
             </div>
-            <div class="reviewText center">후기에 대한 내용</div>
+            <div class="reviewText center">
+              <div class="cardText">
+                <div><span class="name">제목</span> : 홀리 몰리!! 애기가 너무 이뻐여!!</div>
+                <div class="box center">
+                  <div><span class="name">닉네임 : </span>귀여운덕후</div>
+                  <div><span class="name">반려동물 이름 : </span>근육맨</div>
+                </div>
+                <div>이쁜아이 잘 구조해서 기부니가 좋습니다ㅎㅎ 잘 키울게여!!</div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -177,7 +195,16 @@
             <div class="reviewImg">
               <img src="/images/dog/profile3.jpg" alt="">
             </div>
-            <div class="reviewText center">후기에 대한 내용</div>
+            <div class="reviewText center">
+              <div class="cardText">
+                <div><span class="name">제목</span> : 서울 날씨</div>
+                <div class="box center">
+                  <div><span class="name">닉네임 : </span>기상청</div>
+                  <div><span class="name">반려동물 이름 : </span>비</div>
+                </div>
+                <div>안녕하세요. 오늘 서울의 날씨는 화창한 날이 되겠습니다!</div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -186,7 +213,16 @@
             <div class="reviewImg">
               <img src="/images/dog/profile4.jpg" alt="">
             </div>
-            <div class="reviewText center">후기에 대한 내용</div>
+            <div class="reviewText center">
+              <div class="cardText">
+                <div><span class="name">제목</span> : goobye</div>
+                <div class="box center">
+                  <div><span class="name">닉네임 : </span>빡친효신</div>
+                  <div><span class="name">반려동물 이름 : </span>보이스</div>
+                </div>
+                <div>멀어져 가는 오후를 바라보다~ 스쳐 지나가버린 그때 생각이나</div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -195,7 +231,17 @@
             <div class="reviewImg">
               <img src="/images/dog/profile5.jpg" alt="">
             </div>
-            <div class="reviewText center">후기에 대한 내용</div>
+            <div class="reviewText center">
+              
+              <div class="cardText">
+                <div><span class="name">제목</span> : 강아지가 노는 모습 흐믓해서 충격</div>
+                <div class="box center">
+                  <div><span class="name">닉네임 : </span>전직 기자</div>
+                  <div><span class="name">반려동물 이름 : </span>리포터</div>
+                </div>
+                <div>최근 유기동물을 입양하는 사람이 늘고 있는데요. 제가 한번 입양해보겠습니다.</div>
+              </div>
+            </div>
           </div>
         </div>
         <a href="/pages/review.html">
