--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </ul>
 
   <div class="main">
-    
+
     <div class="inner">
       <div class="mainText">
         <h1>주인님의 냄새가 나요!</h1>
@@ -145,9 +145,9 @@
     </div>
   </section>
 
-  <section class="mainTip">
+  <!-- <section class="mainTip">
 
-  </section>
+  </section> -->
 
   <section class="review center">
     <div class="inner center">
