add login & signup & forms

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
 </head>
 <body>
   <header>
+
+  <div class="loginBox center">
+
+    <a href="/pages/signInForm.html">
+      <div class="signIn center">
+        로그인
+      </div>
+    </a>
+
+    <a href="/pages/signUpForm.html">
+      <div class="signUp center">
+        회원가입
+      </div>
+    </a>
+
+  </div>
+
     <div class="inner">
       <div class="logo center">
         <a href="/index.html" class="center">
@@ -95,7 +112,7 @@
     </div>
   </div>
 
-  <section class="searchCode center">
+  <section class="searchCode center"> <!-- 데이터 정부 사이트 를 참고 해본결과 이름과 전화번호 등을 추가로 입력해야됨 -->
     <h1>반려동물의 등록번호를 알고 계신가요?</h1>
     <article class="searchBox center">
       <input type="text" class="searchInput">
