--- a/pages/dogfind.html
+++ b/pages/dogfind.html
@@ -77,9 +77,11 @@
         </div>
       </div>
 
-      <div class="write btn center">
-        글쓰기
-      </div>
+      <a href="/pages/dogfindForm.html">
+        <div class="write btn center">
+          글쓰기
+        </div>
+      </a>
 
       <div class="boardList">
         <a href="/pages/dogfindInfo.html">
