--- a/pages/findnew.html
+++ b/pages/findnew.html
@@ -211,9 +211,11 @@
         </div>
       </div>
         
+      <a href="/pages/findnewForm.html">
         <div class="write btn center">
           글쓰기
         </div>
+      </a>
       </div>
 
       <div class="boardList">
